# PyDocFlow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
llm/: __init__.py  base.py  config.py  errors.py  registry.py
llm/providers/: __init__.py  litellm.py  mock.py  ollama.py
ocr/: basic_pytesseract.py  pytesseract_engine.py
persistence/: base.py  db.py  factory.py  models.py  repository.py  schemas.py
persistence/mongodb/: client.py  models.py  repository.py  settings.py
persistence/postgresql/: __init__.py  client.py  models.py  repository.py  settings.py
services/: base.py  ingestion.py  parsing.py  persistence.py
tests/: test_base_service.py  test_ingestion.py  test_llm.py
